--- a/phishingdatasetsb.ipynb
+++ b/phishingdatasetsb.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyN+OW6Odq2oJo1m5f9TxnqY",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ashwin359/phishimgdatasets/blob/main/phishingdatasetsb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "xJJlyNDzEE6H"
       },
@@ -39,7 +51,7 @@
         "id": "eC4nKN0jEbkN",
         "outputId": "55a66491-d02a-4a91-f74a-34c027b5babb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -260,10 +272,27 @@
         "data=pd.read_csv(r\"archive.zip\")"
       ],
       "metadata": {
-        "id": "i61tUK6AFHdA"
+        "id": "i61tUK6AFHdA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "71561afa-a66b-4d66-c84a-17ea67e32120"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3347077942.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"archive.zip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -278,7 +307,7 @@
         "id": "Smu2WalJFViZ",
         "outputId": "246929a8-a185-43f3-9216-34d1e4efab69"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +980,7 @@
         "id": "gtfCHXwsFG2n",
         "outputId": "42497e9e-7736-4452-9541-49168a81c169"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1036,7 @@
       "metadata": {
         "id": "XwW3i-THFhj1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1023,7 +1052,7 @@
         "id": "PsW_HV9vFod9",
         "outputId": "8d24bcaf-c171-49d4-b54a-faaf24e1d927"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1697,7 +1726,7 @@
         "id": "N96zlkkIFtVq",
         "outputId": "64f09046-b92a-48ef-d7cb-2feb0363ef9a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2315,7 +2344,7 @@
         "id": "btGQfKhqF0mv",
         "outputId": "8764084a-f0a4-4ee5-9de9-c4160761d3d7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2524,7 +2553,7 @@
         "id": "WzRWcP3cF7nQ",
         "outputId": "9ab18c45-c45e-4d5b-a8ad-5ed21f7e89a5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3065,7 +3094,7 @@
         "id": "TuI-q3gOGBRS",
         "outputId": "666e53c0-e964-4715-86d7-f0327c850b26"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3174,7 +3203,7 @@
         "id": "RSQeIc4OGVNe",
         "outputId": "b6c74424-5b86-4fe8-eedf-278c7ea352be"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3201,7 +3230,7 @@
         "id": "6LIVlEMPGcWF",
         "outputId": "5efd4d9c-41f2-4060-df4e-724b121d9ab6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3819,7 +3848,7 @@
         "id": "WcomJFkMGnd9",
         "outputId": "c622f05b-2235-43b0-debf-1c3fbc165a4a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4493,7 +4522,7 @@
         "id": "geqHeu1BGp2I",
         "outputId": "429f7308-5dbe-40e8-9899-feb4b406eb49"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5106,7 +5135,7 @@
       "metadata": {
         "id": "iT4uMS0SGt9Q"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5122,7 +5151,7 @@
         "id": "lpLXDB8LG-71",
         "outputId": "cf587e0b-11f1-4999-d03b-6b953cb15f3e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5740,7 +5769,7 @@
         "id": "xTc9G4yZHKKl",
         "outputId": "d8b07194-69db-4a24-c574-26609312f7ec"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6413,7 +6442,7 @@
         "id": "gdSrvtKYH5Dw",
         "outputId": "2b1bfc1a-eea8-4a41-94b9-c6d25fbda0ea"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6442,7 +6471,7 @@
         "id": "qRi_LY7aH8d9",
         "outputId": "c527f5e6-eddd-4e39-c545-3d41afe59ac7"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6464,7 +6493,7 @@
       "metadata": {
         "id": "VFizTB5AI6D3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6480,7 +6509,7 @@
         "id": "m0PbS3izJLXZ",
         "outputId": "5800202a-484d-494f-bb24-659d6956a7e7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6556,7 +6585,7 @@
       "metadata": {
         "id": "sMd5f_FeJcCR"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6576,7 +6605,7 @@
         "id": "jlMBsbpELG0u",
         "outputId": "6f0a2292-29be-48de-e1fb-5ea6d33c1d3d"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6614,7 +6643,7 @@
         "id": "vDWsSdSRMXHh",
         "outputId": "48df2dd3-6d88-4ce9-a469-c7067533af64"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6665,7 +6694,7 @@
         "id": "5G8Ux3pnMvuF",
         "outputId": "55803d92-114d-41b7-d359-553f20fec0f3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
